# class-scaffolding

./: CONTRIBUTING.md  Cargo copy.toml  Cargo.toml  README.md
.github/workflows/: development.yaml  master.yaml  test.yaml
examples/: person.rs
scaffolding-macros/: Cargo.toml  LICENSE  README.md
scaffolding-macros/src/: lib.rs
scaffolding-macros/tests/: macro_test.rs  macro_test.rs.old
src/: countries.json  defaults.rs  entity.rs  errors.rs  lib.rs  reference.bck  reference.bck.rs  reference.rs  reference.rs.bck  reference.rs.old  reference_attribute.rs  scaffolding.rs
tests/: address_test.rs  all_features_test.rs  contact_data.yaml  core_test.rs  country_test.rs  emailaddress_test.rs  entity.json  entity_test.rs  integration_test.rs  metadata_test.rs  notes_test.rs  openapi.json  openapi.yaml  phonenumber_test.rs  tags_test.rs
