[package]
name = "scaffolding-core"
version = "0.3.0"
authors = ["dsietz <davidsietz@yahoo.com>"]
categories = ["development-tools"]
description = "A software development kit that provides the scaffolding for building applications and services."
documentation = "https://docs.rs/scaffolding-core"
edition = "2021"
exclude = [
  "examples/*",
  "target/*",
  "tests/*",
  "benches/*",
]
keywords = ["sdk", "design", "development", "object-oriented", "class"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/dsietz/scaffolding-core"

[badges]
maintenance = {status = "experimental"}

[lib]
name = "scaffolding_core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.35"
scaffolding-macros = {path = "./scaffolding-macros", version = "0.3.0"}
serde = "1.0.197"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.uuid]
features = ["v4"]
version = "1.5.0"

[dev-dependencies]
serde_yaml = "0.9.27"
