[package]
name = "scaffolding-macros"
version = "1.0.0"
authors = ["dsietz <davidsietz@yahoo.com>"]
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
keywords = ["sdk", "macros", "development", "object-oriented", "class"]
categories = ["development-tools"]
description = "A software development kit that provides the scaffolding macros for building applications and services."
documentation = "https://docs.rs/scaffolding-core"
repository = "https://github.com/dsietz/scaffolding-core"
exclude = [
    "examples/*",
    "target/*",
	"tests/*",
	"benches/*",
]

[badges]
maintenance = {status = "experimental"}

[lib]
name = "scaffolding_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = {version = "2.0.53", features = ["full", "extra-traits"]}
serde = "1.0.197"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_yaml = "0.9.27"
